# cinna-core

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  task.txt
.cinna-core-kit/scripts/: check_docs_references.py  sync_ga_knowledge.py
.claude/agents/: backend-test-writer.md  cinna-core-backend-test-writer.md  cinna-core-code-reviewer.md  cinna-core-developer.md  cinna-core-feature-documenter.md  cinna-core-manager.md  (+9 more)
backend/: Dockerfile  pyproject.toml
backend/app/env-templates/python-env-advanced/: .env.template  Dockerfile  docker-compose.template.yml  pyproject.toml
backend/app/env-templates/python-env-advanced/app/: .env.template  BUILDING_AGENT_EXAMPLE.md  README.md  main.py
backend/app/env-templates/python-env-advanced/app/core/prompts/: BUILDING_AGENT.md
backend/app/env-templates/python-env-advanced/app/core/server/: agent_env_service.py  models.py  prompt_generator.py  routes.py  sdk_manager.py  sdk_utils.py
backend/app/env-templates/python-env-advanced/app/core/server/adapters/: base.py  claude_code.py  google_adk.py  sqlite_session_service.py
backend/app/env-templates/python-env-advanced/app/core/server/adapters/google_adk_wr_prompts/: __init__.py  bash_tool_prompt.md  general_system_prompt.md  read_tool_prompt.md
backend/app/env-templates/python-env-advanced/app/core/server/tools/: __init__.py  agent_handover.py  create_agent_task.py  knowledge_query.py  respond_to_task.py  update_session_state.py
backend/app/env-templates/python-env-advanced/app/docs/: ENTRYPOINT_PROMPT.md
backend/app/env-templates/python-env-advanced/app/server/: routes.py  sdk_manager.py
backend/app/env-templates/python-env-advanced/app/workspace/: workspace_requirements.txt
backend/app/env-templates/python-env-advanced/app/workspace/docs/: ENTRYPOINT_PROMPT.md
backend/app/env-templates/python-env-advanced/app/workspace/knowledge/odoo-erp/: general_info.md  vendor_bills.md
docs/: README.md  agent_mcp_connector_concept.md  future_improvements.md  oauth_credentials_management.md  security_credentials_whitelist.md  user_workspaces_management.md
frontend/: index.html  package-lock.json  package.json
scripts/: install.sh
(+930 files in other folders)
