[project]
name = "agent-environment"
version = "1.0.0"
description = "Agent runtime environment with Claude Code SDK support"
requires-python = ">=3.11"

dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "httpx>=0.27.0",
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
