[project]
name = "agent-environment"
version = "1.0.0"
description = "Agent runtime environment with Claude Code SDK / Google ADK support"
requires-python = ">=3.11"

dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
    "google-auth>=2.47.0",
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.3.0",
    "google-api-python-client>=2.187.0",
    "google-adk>=1.18.0",
    "litellm>=1.80.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app/core"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
